--- a/app/assets/stylesheets/hooky_style.css
+++ b/app/assets/stylesheets/hooky_style.css
@@ -13,8 +13,8 @@ body {
 #title-text {
   font-size: 75px;
   position: fixed;
-  margin-top: 5%;
-  margin-left: 4%;
+  margin-top: 70px;
+  margin-left: 80px;
   font-family: 'Orbitron', sans-serif;
   z-index: 1;
 }
@@ -23,10 +23,10 @@ body {
   background-color: white;
   width: 90%;
   position: fixed;
-  height: 5%;
+  height: 40px;
   box-shadow: 0px 0px 120px #ffffff;
-  margin-top: 8%;
-  margin-left: 3%;
+  margin-top: 120px;
+  margin-left: 60px;
   border-radius: 20px;
   z-index: 2;
 }
@@ -37,8 +37,8 @@ body {
   position: fixed;
   height: 90%;
   box-shadow: 0px 0px 120px #005C99;
-  margin-left: 18.5%;
-  margin-top: 2%;
+  margin-left: 363px;
+  margin-top: 35px;
   z-index: 0;
 
 }
