--- a/app/views/publics/index.html.erb
+++ b/app/views/publics/index.html.erb
@@ -1,8 +1,27 @@
-<span id='title-text'>
-  Hooky Games
-</span>
-
 <div id='all'>
-  <div class='content ng-animate ng-enter'></div>
-  <div class='menu ng-animate ng-enter'></div>
+  <div class='title'>
+    <span id='title-text1'>
+      Hooky
+    </span>
+    <span id='title-text2'>
+      Games
+    </span>
+  </div>
+
+  <div class='menu ng-animate ng-enter'>
+    <ul class='menu-links'>
+      <li>Something</li>
+      <li>Something Else</li>
+      <li>Games List</li>
+      <li>Stream</li>
+      <li>Hardware</li>
+      <li>Contact</li>
+    </ul>
+  </div>
+  <div class='content ng-animate ng-enter'>
+    <div class='search'>
+        <input type='text' size='60' class='text-field'></input>
+        <button class='button'>Search</button>
+    </div>
+  </div>
 </div>
