Modified sidebar CSS

--- a/app/views/publics/hardware.html.erb
+++ b/app/views/publics/hardware.html.erb
@@ -1,1 +1,70 @@
-Hardware list coming shortly...
+Hooky Games current setup...
+
+<div class='hardware'>
+  <table>
+    <tr class='hardware-header'>
+      <td>Hardware</td>
+      <td>Current</td>
+      <td>Desired</td>
+    </tr>
+    <tr>
+      <td>Capture Device</td>
+      <td><a href='http://www.newegg.com/Product/Product.aspx?Item=N82E16832252057&cm_re=roxio_game_capture_hd_pro-_-32-252-057-_-Product'>Roxio Game Capture HD Pro</a></td>
+      <td>
+    </tr>
+    <tr>
+      <td>Webcam</td>
+      <td><a href='http://www.newegg.com/Product/Product.aspx?Item=N82E16826104368&cm_re=c310-_-26-104-368-_-Product'>Logitech C310 USB Webcam</a></td>
+      <td>
+    </tr>
+    <tr>
+      <td>Headset/Microphone</td>
+      <td><a href='http://www.newegg.com/Product/Product.aspx?Item=9SIA2F81539738&cm_re=px22-_-0V7-0028-00001-_-Product'>Turtle Beach Ear Force PX22</a></td>
+      <td>
+    </tr>
+    <tr>
+      <td>Video Card</td>
+      <td><a href='http://www.newegg.com/Product/Product.aspx?Item=N82E16814125443&cm_re=gigabyte_gtx_660-_-14-125-443-_-Product'>Gigabyte GeForce GTX 660 2GB 192-bit GDDR5</a></td>
+      <td>
+    </tr>
+    <tr>
+      <td>Processor</td>
+      <td><a href='http://www.newegg.com/Product/Product.aspx?Item=N82E16819103808'>AMD Phenom II X4 3.2GHz Quad Core</a></td>
+      <td>
+    </tr>
+    <tr>
+      <td>Motherboard</td>
+      <td><a href='http://www.newegg.com/Product/Product.aspx?Item=N82E16813131651'>ASUS M4A87TD/USB3 ATX</a></td>
+      <td>
+    </tr>
+    <tr>
+      <td>Memory</td>
+      <td><a href='http://www.newegg.com/Product/Product.aspx?Item=N82E16820220466'>Patriot G Series 8GB DDR3 1333 RAM</a></td>
+      <td>
+    </tr>
+    <tr>
+      <td>Hard Drive</td>
+      <td><a href='http://www.newegg.com/Product/Product.aspx?Item=N82E16822236404&cm_re=western_digital_2tb-_-22-236-404-_-Product'>Western Digital 2TB SATA</a></td>
+      <td>
+    </tr>
+    <tr>
+      <td>Mouse</td>
+      <td><a href='http://www.newegg.com/Product/Product.aspx?Item=N82E16826104261'>Logitech G9x Wired 5700 dpi Laser</a></td>
+      <td>
+    </tr>
+    <tr>
+      <td>Keyboard</td>
+      <td><a href='http://www.newegg.com/Product/Product.aspx?Item=N82E16823126087&cm_re=g110_keyboard-_-23-126-087-_-Product'>Logitech G110 Gaming</a></td>
+      <td>
+    </tr>
+    <tr>
+      <td>Case</td>
+      <td><a href='http://www.newegg.com/Product/Product.aspx?Item=N82E16811129021'>Antec Nine Hundred Mid Tower Case</a></td>
+      <td>
+    </tr>
+    <tr>
+      <td>Data Connection</td>
+      <td>Verizon FiOS 50MBps Down / 50MBps Up</td>
+      <td>
+    </tr>
+</div>
