--- a/app/views/publics/index.html.erb
+++ b/app/views/publics/index.html.erb
@@ -20,22 +20,23 @@
       <li>Contact</li>
     </ul>
   </div>
-
+<!--
   <div class='sidebar ng-animate ng-enter'>
-    <!-- <object type="application/x-shockwave-flash" height="200" width="262" id="live_embed_player_flash" data="http://www.twitch.tv/widgets/live_embed_player.swf?channel=hookygames" bgcolor="#000000"><param name="allowFullScreen" value="true" /><param name="allowScriptAccess" value="always" /><param name="allowNetworking" value="all" /><param name="movie" value="http://www.twitch.tv/widgets/live_embed_player.swf" /><param name="flashvars" value="hostname=www.twitch.tv&channel=hookygames&auto_play=true&start_volume=25" /></object>
-    <iframe frameborder="0" scrolling="no" src="http://twitch.tv/hookygames/chat?popout=" height="500" width="262"></iframe> -->
-  </div>
+    <object type="application/x-shockwave-flash" height="200" width="262" id="live_embed_player_flash" data="http://www.twitch.tv/widgets/live_embed_player.swf?channel=hookygames" bgcolor="#000000"><param name="allowFullScreen" value="true" /><param name="allowScriptAccess" value="always" /><param name="allowNetworking" value="all" /><param name="movie" value="http://www.twitch.tv/widgets/live_embed_player.swf" /><param name="flashvars" value="hostname=www.twitch.tv&channel=hookygames&auto_play=true&start_volume=25" /></object>
+    <iframe frameborder="0" scrolling="no" src="http://twitch.tv/hookygames/chat?popout=" height="500" width="262"></iframe>
+  </div> -->
 
   <div class='content-bg ng-animate ng-enter'>
     <div class='search'>
         <input type='text' size='60' class='text-field'></input>
         <button class='button'>Search</button>
     </div>
-    <div class='content'>
+  </div>
+
+  <div class='content ng-animate ng-enter'>
       <div class='posts' ng-repeat='post in posts'>
 
       </div>
     </div>
-  </div>
 
 </div>
