--- a/app/assets/stylesheets/hooky_style.css.scss
+++ b/app/assets/stylesheets/hooky_style.css.scss
@@ -117,14 +117,37 @@ ul a {
 
 .content {
   background-color: black;
-  width: 95%;
-  height: 85%;
-  z-index: 3;
-  position: relative;
+  width: 100%;
+  height: 70%;
+  z-index: -1;
+  position: fixed;
   margin-left: 20px;
-  margin-top: 100px;
+  margin-top: 185px;
   border-radius: 10px;
   box-shadow: 0px 0px 120px #005C99;
+}
+
+.hardware {
+  color: white;
+  font-size: 25px;
+}
+
+.hardware ul {
+  list-style-type: none;
+}
+
+.hardware a {
+  color: white;
+  font-weight: normal;
+}
+
+.hardware-header {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.hardware-header td {
+  padding: 10px;
 }
 
 .menu.ng-enter {
@@ -141,11 +164,11 @@ ul a {
   animation: lightSpeedIn 2s;
 }
 
-.sidebar.ng-enter {
-  -webkit-animation: fadeIn 12s;
-  -moz-animation: fadeIn 12s;
-  -ms-animation: fadeIn 12s;
-  animation: fadeIn 12s;
+.content.ng-enter {
+  -webkit-animation: fadeIn 7s;
+  -moz-animation: fadeIn 7s;
+  -ms-animation: fadeIn 7s;
+  animation: fadeIn 7s;
 }
 
 .button {
